Integrate student form w db (#12)
* added user validations, configuring user signup flow [wip]

* signup set up up to add students, needs cleanup

* started adding feature tests to signup flow

* got hot reloading to work (see /hello_world)

* forgot a file, added in eslint/flow superpowers

* hopefully fix tests

* remove unused assets

* front-end for adding students in signup [wip]

* production build possibly working

* Add production build (#9)

* production build possibly working

* last build failed, added webpack-manifest-plugin

* react-hot-loader -> production dependency

* add dependencies to hope it fixes production

* wrong version of rhl

* fix dependency

* front-end for adding students in signup [wip] (#10)

* start create schools [WIP, not yet working]

* teacher signup frontend basically done

* fix school migration

* add school id field

* create classroom post data all there on frontend

* better enter button handling

* front-end password length validation

* Populate schools (#11)

* create school model, write some basic spex, start population schools

* make some changes for school population

* stipulate that user account exists

* all but one spec working

* forgot to add new fixtures and models

* all spex finally working

* signup basically completely functional

* a lil more specs for signup

* temporarily disable add new school

* disable login

--- a/app/views/layouts/hello_world.html.erb
+++ b/app/views/layouts/hello_world.html.erb
@@ -6,10 +6,26 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'webpack-bundle' %>
+
+    <% if ENV["HMR"] == "1" %>
+      <%= javascript_include_tag "http://localhost:8080/hmr-bundle.js" %>
+    <% else %>
+      <%= stylesheet_pack_tag('vendor-bundle',
+                              media: 'all',
+                              'data-turbolinks-track': true) %>
+
+      <%= stylesheet_pack_tag('app-bundle',
+                              media: 'all',
+                              'data-turbolinks-track': true) %>
+
+      <%= javascript_pack_tag('vendor-bundle', 'data-turbolinks-track': true) %>
+      <%= javascript_pack_tag('app-bundle', 'data-turbolinks-track': true) %>
+    <% end %>
+
   </head>
 
   <body>
     <%= yield %>
+
   </body>
 </html>
