--- a/app/views/static_pages/homepage/modals/_signup-name-password.erb
+++ b/app/views/static_pages/homepage/modals/_signup-name-password.erb
@@ -13,14 +13,17 @@
           
             <h2 class="modal-signup-heading name-heading" style="margin-bottom: 1.2em">Enter your name and password</h2>
 
-            <form id='signup-name-password' class="signup-form" action='/auth/freemium-signup-register' method="post"> 
+
+            <form id='signup-name-password' class="signup-form" action='/users' method="post"> 
               <!-- <form id='login'> -->
                 <div class="signup-setup">
                   <div class="field" id="signup-field">
-                      <input name="first_name" autocomplete="off" placeholder="First name" class="input" required>
-                      <input name="last_name" autocomplete="off" placeholder="Last name" class="input" required>
-                      <input name="password" autocomplete="off" placeholder="Password" type="password" class="input" required>
+                      <input name="user[first_name]" id="signup-first-input" autocomplete="off" placeholder="First name" class="input" required>
+                      <input name="user[last_name]" id="signup-last-input" autocomplete="off" placeholder="Last name" class="input" required>
+                      <input name="user[password]" id="signup-password-input" autocomplete="off" placeholder="Password" type="password" class="input" pattern=".{6,}" title="Password must be at least 6 characters long" required>
                   </div>
+                  <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+
                   <button id="signup-name-password-button" data-dismiss='modal' class="signup-form-button pure-button pure-button-primary get_update dialog-button">Complete sign up</button>
 
                </div>
