--- a/app/views/static_pages/signup/modals/_signature.erb
+++ b/app/views/static_pages/signup/modals/_signature.erb
@@ -11,14 +11,28 @@
                   <div class="signup-setup">
                     <div class="field" id="signup-field">
                       <input name="signature" placeholder="Ms. Jones" class="input" required>
-                      <input type="hidden" name="role" value="">
                     </div>
-                     <a id="page3link" class="transition-link ui-btn web-mobile-signup-button" href="#page4-find-school" data-transition="fade">
+
+                    <div class="field" id="signup-field">
+                      <label class="label">Classroom name</label>
+                      <input name="classroom_name" placeholder='e.g. "Homeroom" or "1st Grade English"' class="input" required>
+                    </div>
+
+                     <a id="page3link" class="transition-link ui-btn web-mobile-signup-button" href="#page5-add-students" data-transition="fade">
+
                         <%= "Save" %>
                      </a>
 
                      <script>
-                       $(document).on('click', '#page3link',function(event){
+
+                      $('#educator-signature-form').on('keyup keypress', function(e) {
+                        var keyCode = e.keyCode || e.which;
+                        if (keyCode === 13) {
+                          $('#page3link').click();
+                        }
+                      });
+                      
+                      $(document).on('click', '#page3link',function(event){
 
                         var ValidStatus = $("#educator-signature-form").valid();
                         // console.log(ValidStatus);
@@ -29,6 +43,9 @@
                             return false;
                         }
                         mixpanel.track('signature given');
+
+                        $('#page5-add-students form#add-students').find('input[name=signature]').val($('#page3-signature input[name=signature]').val());
+                        $('#page5-add-students form#add-students').find('input[name=classroom_name]').val($('#page3-signature input[name=classroom_name]').val());
                       });
 
                      </script>
