--- a/public/stylesheets/sass/freemium-signup.scss
+++ b/public/stylesheets/sass/freemium-signup.scss
@@ -14,6 +14,10 @@ body {
   position: relative;
 }
 
+#add-students.signup-form {
+  position: relative;
+}
+
 .dropdown-menu {
   position: absolute;
   width: 100%;
@@ -107,7 +111,7 @@ p.school-name {
   margin-bottom: 0em;
 }
 
-#page1-choose-role, #page2-invite-teacher, #page3-signature {
+#page1-choose-role, #page2-invite-teacher, #page3-signature, #page5-add-students {
   // background: #3F3F5E;
   background: #3E415E;
 }
