--- a/app/views/static_pages/homepage/modals/_educator-login.erb
+++ b/app/views/static_pages/homepage/modals/_educator-login.erb
@@ -9,7 +9,7 @@
                 <div class="signup-setup">
                   <div class="field" id="signup-field">
                      <label class="label">Email address or phone number</label>
-                    <input name="usernameDisplay" placeholder="Email address or phone number" class="input" required>
+                    <input name="usernameDisplay" placeholder="Email address" class="input" required>
                       <label class="label">Password</label>
                     <input name="password" type="password" placeholder="password" class="input" required>
                     <input type="hidden" name='username'>
