--- a/app/views/static_pages/homepage/modals/_main-signup-form.erb
+++ b/app/views/static_pages/homepage/modals/_main-signup-form.erb
@@ -1,8 +1,9 @@
-<form id='first-signup-form' action="/auth/freemium-signup-register" method="post" style="display: none;">
+
+<form id='first-signup-form' action="/users" method="post" style="display: none;">
   
 </form>
 
 
-<form id='main-signup-form' action="/auth/freemium-signup" method="post" style="display: none;">
+<form id='main-signup-form' action="/users" method="post" style="display: none;">
   
 </form>
