--- a/app/views/static_pages/homepage/headers/_libraries.erb
+++ b/app/views/static_pages/homepage/headers/_libraries.erb
@@ -27,5 +27,6 @@
 
   <link href='https://fonts.googleapis.com/css?family=Karla:400,400italic,700' rel='stylesheet' type='text/css'>
   
+  <%= csrf_meta_tags %>
 
   
