--- a/app/views/static_pages/homepage/index.erb
+++ b/app/views/static_pages/homepage/index.erb
@@ -3,9 +3,6 @@
   <head>
 
 
-    <%= csrf_meta_tags %>
-
-
     <%= render 'static_pages/components/headers' %>
 
     <%= render 'static_pages/homepage/headers/mixpanel', locals: {mixpanel_homepage_key: @mixpanel_homepage_key} %>
@@ -192,6 +189,7 @@
       <div class="signup-name-password-mobile" style="display: none;">
         <h2>Enter your name and a password</h2>
         <form id='signup-name-password-mobile' class="signup-form" action="/users" method="post">
+              <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
               <!-- <form id='login'> -->
                 <div class="signup-setup">
                   <div class="field" id="signup-field">
