--- a/app/views/static_pages/homepage/modals/_main-signup-form.erb
+++ b/app/views/static_pages/homepage/modals/_main-signup-form.erb
@@ -1,9 +1,5 @@
 
 <form id='first-signup-form' action="/users" method="post" style="display: none;">
-  
-</form>
+                    <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
 
-
-<form id='main-signup-form' action="/users" method="post" style="display: none;">
-  
 </form>
