wrap form in user

--- a/app/views/static_pages/homepage/index.erb
+++ b/app/views/static_pages/homepage/index.erb
@@ -193,9 +193,9 @@
               <!-- <form id='login'> -->
                 <div class="signup-setup">
                   <div class="field" id="signup-field">
-                      <input name="first_name" autocomplete="off" placeholder="First name" class="input" required>
-                      <input name="last_name" autocomplete="off" placeholder="Last name" class="input" required>
-                      <input name="password" autocomplete="off" placeholder="Password" type="password" class="input" required>
+                      <input name="user[first_name]" autocomplete="off" placeholder="First name" class="input" required>
+                      <input name="user[last_name]" autocomplete="off" placeholder="Last name" class="input" required>
+                      <input name="user[password]" autocomplete="off" placeholder="Password" type="password" class="input" required>
                   </div>
                   <button id="signup-name-password-button-mobile" type="submit" class="signup-form-button pure-button pure-button-primary get_update dialog-button">Complete sign up</button>
                </div>
