--- a/app/views/static_pages/homepage/modals/_main-signup-form.erb
+++ b/app/views/static_pages/homepage/modals/_main-signup-form.erb
@@ -3,3 +3,9 @@
                     <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
 
 </form>
+
+
+<form id='main-signup-form' action="/users" method="post" style="display: none;">
+                    <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+
+</form>
