--- a/app/views/static_pages/homepage/index.erb
+++ b/app/views/static_pages/homepage/index.erb
@@ -189,14 +189,14 @@
       <div class="signup-name-password-mobile" style="display: none;">
         <h2>Enter your name and a password</h2>
         <form id='signup-name-password-mobile' class="signup-form" action="/users" method="post">
-              <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
               <!-- <form id='login'> -->
                 <div class="signup-setup">
                   <div class="field" id="signup-field">
                       <input name="user[first_name]" autocomplete="off" placeholder="First name" class="input" required>
                       <input name="user[last_name]" autocomplete="off" placeholder="Last name" class="input" required>
-                      <input name="user[password]" autocomplete="off" placeholder="Password" type="password" class="input" required>
+                      <input name="user[password]" autocomplete="off" placeholder="Password" type="password" class="input" pattern=".{6,}" title="Password must be at least 6 characters long" required>
                   </div>
+                  <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
                   <button id="signup-name-password-button-mobile" type="submit" class="signup-form-button pure-button pure-button-primary get_update dialog-button">Complete sign up</button>
                </div>
         </form>
