--- a/client/src/StudentDashboard/styles.css
+++ b/client/src/StudentDashboard/styles.css
@@ -38,14 +38,16 @@
 .readerContainer {
 	width: 400px;
 	height: 80%;
-	background-color: purple;
+	background-color: white;
 }
 
 
-.routeTransition, .routeTransition > div {
-	position: absolute;
-	left: 0px;
-	right: 0px;
-	top: 0px;
-	bottom: 0px;
+.routeTransition {
+	width: 100%;
+	height: 100%;
+}
+
+.routeTransition > div {
+	width: 100%;
+	height: 100%;
 }
