--- a/app/views/layouts/student_dashboard.html.erb
+++ b/app/views/layouts/student_dashboard.html.erb
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html style="height: 100%;">
   <head>
-    <title>ReactOnRailsWithWebpacker</title>
+    <title>Readup</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+
+    <%= stylesheet_link_tag "https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css" %>
 
     <% if ENV["HMR"] == "1" %>
       <%= javascript_include_tag "http://localhost:8080/hmr-bundle.js" %>
@@ -20,6 +22,8 @@
 
       <%= javascript_pack_tag('vendor-bundle', 'data-turbolinks-track': true) %>
       <%= javascript_pack_tag('app-bundle', 'data-turbolinks-track': true) %>
+
+      
     <% end %>
 
   </head>
