--- a/client/src/StudentDashboard/components/RectangleButton/styles.css
+++ b/client/src/StudentDashboard/components/RectangleButton/styles.css
@@ -9,6 +9,7 @@
 	align-items: center;
 	z-index: 100;
 	color: white;
+	border-radius: 5px;
 
 	/* unselectable: https://stackoverflow.com/questions/826782/how-to-disable-text-selection-highlighting-using-css*/
 	-webkit-touch-callout: none; /* iOS Safari */
@@ -29,11 +30,10 @@
 }
 
 .rectangleButtonTitle {
-	margin-bottom: 5px;
 	font-size: 1.6em;
 }
 
 .rectangleButtonSubtitle {
-	margin-top: 5px;
+	margin-top: 3px;
 	font-size: 1.1em;
 }
