Add/find school (#13)
* added search functionality

* fix schools_controller_spec, enhance school model spec

* find school working, but broke css

* fix (via revert) the css on find school. find and add school work now ^_^. needs unit tests

* forgot to commit file, add migration for remove uniqueness constraint

--- a/app/views/static_pages/signup/modals/_add_students.erb
+++ b/app/views/static_pages/signup/modals/_add_students.erb
@@ -10,6 +10,7 @@
     background-size: 30px;
   }
   .add-student-dropdown {
+    width: 48%;
     background-color: #E6F6FD;
   }
   .add-student-dropdown a:hover {
@@ -67,6 +68,7 @@
                 <!-- <h3 class="modal-signup-heading">to add your class</h3> -->
 
                 <form id="add-students" class="signup-form" style="position: relative">
+
                   <div class="signup-setup">
                       <div class="field" id="signup-field">
                          <label class="label">Start typing to add students</label>
@@ -75,7 +77,7 @@
                   </div>
 
                   <!-- create the dropdown menu here -->
-                  <div class="dropdown-menu add-student-dropdown" style="display: none;">
+                  <div class="dropdown-menu add-student-dropdown" style="display: none; width: 48%;">
                     <a id="add-student-button" class="disabled" href="#"><p>Add students</p></a>
                   </div>
 
