--- a/app/views/static_pages/signup/modals/_find-school.erb
+++ b/app/views/static_pages/signup/modals/_find-school.erb
@@ -62,6 +62,8 @@
                 <!-- <h3 class="modal-signup-heading">to add your class</h3> -->
 
                 <form id="school-info" class="signup-form">
+                  <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+
                   <div class="signup-setup">
                       <div class="field" id="signup-field">
                          <label class="label">School</label>
